--- a/ClientApp/src/components/Terminal.css
+++ b/ClientApp/src/components/Terminal.css
@@ -69,6 +69,21 @@
     font-family: 'Courier New', monospace;
     font-size: 8px; /* Smaller font size for mobile devices */
     white-space: pre; /* Allow the art to wrap if needed */
+    opacity: 0;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+.ascii-art-fade-in {
+    animation: fadeIn 4s ease-out forwards;
 }
 
 .ascii-art-name {
@@ -93,10 +108,13 @@
 .command-entry {
     display: grid;
     grid-template-columns: 1fr 2fr;
+    gap: 25px;
 }
 
 .command-description {
     text-align: left; /* Align descriptions to the right */
+    word-wrap: break-word; /* Allow long words to break and wrap */
+    white-space: normal; /* Ensures text wraps */
 }
 
 .command-name {
