--- a/ClientApp/src/components/StockSimComponents/StockSim.css
+++ b/ClientApp/src/components/StockSimComponents/StockSim.css
@@ -1,4 +1,34 @@
-﻿.search-bar-container {
+﻿.dashboard-container {
+    padding: 20px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+}
+
+.summary-cards-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+.timeframe-selector button {
+    background-color: transparent;
+    border: none;
+    padding: 10px;
+    margin-right: 5px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.timeframe-selector button.active {
+    border-bottom: 2px solid #0d6efd;
+}
+
+.timeframe-selector button.disabled {
+    color: grey;
+    pointer-events: none;
+}
+
+.search-bar-container {
     position: relative; /* This will be the reference for the absolute positioning of the suggestions */
 }
 
