--- a/ClientApp/src/components/TerminalComponents/Terminal.css
+++ b/ClientApp/src/components/TerminalComponents/Terminal.css
@@ -5,14 +5,15 @@
     overflow: hidden;
 }
 
-body {
+body.is-terminal-window {
     background: url('index-background.jpg') top left no-repeat;
     background-size: cover;
 }
 
 .terminal-window {
-    width: 80vw;
-    height: 80vh;
+    width: 90vw;
+    height: 90vh;
+    max-width: 1000px;
     margin: 3rem auto 2rem;
     box-shadow: 0 0 1.2rem #000;
     border-radius: 0.5rem;
@@ -21,6 +22,13 @@ body {
     flex-direction: column;
     border: 1px solid #333;
 }
+
+    .terminal-window.maximized {
+        width: 100vw;
+        height: 100vh;
+        max-width: 100vw;
+        margin: 0;
+    }
 
 .title-bar {
     display: flex;
@@ -82,8 +90,8 @@ body {
 
 .terminal {
     flex-grow: 1;
-    color: #FFF;
-    font-family: 'Courier New', monospace;
+    color: #E1E1E1;
+    font-family: Courier New, Courier, monospace;
     font-size: 15px;
     white-space: pre-wrap;
     overflow-y: auto;
@@ -92,41 +100,39 @@ body {
     padding: 0px 10px;
 }
 
-.terminal-output,
-.terminal-input,
-.terminal-prompt {
-    font-family: inherit;
-    font-size: inherit;
-    white-space: inherit;
-    color: inherit;
-    margin: 0 0 10px;
-}
-
-.terminal-input {
-    background-color: inherit;
-    border: none;
-    outline: none;
-    padding: 0;
-    width: auto;
-}
-
-.terminal-input-container {
-    display: flex; /* Align input and cursor inline */
-    align-items: center;
-    width: 100%;
-}
-
 .terminal-input-container {
     display: flex;
     align-items: center;
     width: 100%;
 }
 
+.terminal-output,
+.terminal-input,
+.terminal-prompt,
+.typed-welcome {
+    font-family: inherit;
+    font-size: inherit;
+    white-space: inherit;
+    color: inherit;
+}
+
+.terminal-input {
+    background-color: inherit;
+    border: none;
+    outline: none;
+    width: auto;
+}
+
+.typed-welcome {
+    margin-top: 10px;
+}
+
 .ascii-art,
 .ascii-art-name {
-    font-family: 'Courier New', monospace;
-    color: #FFF;
+    font-family: inherit;
+    color: #E1E1E1;
     white-space: pre;
+    text-align: center;
 }
 
 .ascii-art {
@@ -134,30 +140,18 @@ body {
 }
 
 .ascii-art-name {
-    position: absolute;
-    left: 10px;
-    top: 18em;
-    white-space: nowrap;
+    font-size: 15px;
 }
 
-.ascii-art-fade-in {
-    animation: fadeIn 4s ease-out forwards;
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
+.command-section {
+    color: #D1BB84;
 }
 
 .command-entry {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 25px;
+    margin-left: 30px;
 }
 
 .command-description, .command-name {
@@ -166,13 +160,16 @@ body {
     white-space: normal;
 }
 
+.command-name {
+    color: #9BDBFE;
+}
+
 @media (min-width: 768px) {
+    .terminal-window {
+        width: 80vw;
+        height: 80vh;
+    }
     .ascii-art {
         font-size: 15px;
-    }
-
-    .ascii-art-name {
-        left: 375px;
-        top: 10em;
     }
 }
