--- a/ClientApp/src/components/TerminalComponents/Terminal.css
+++ b/ClientApp/src/components/TerminalComponents/Terminal.css
@@ -5,16 +5,15 @@
     overflow: hidden;
 }
 
-body.is-terminal-window {
-    background: url('index-background.jpg') top left no-repeat;
-    background-size: cover;
-}
-
 .terminal-window {
+    position: fixed;
+    z-index: 1000;
+    top: 3rem;
+    left: 50%;
+    transform: translateX(-50%);
     width: 90vw;
     height: 90vh;
     max-width: 1000px;
-    margin: 3rem auto 2rem;
     box-shadow: 0 0 1.2rem #000;
     border-radius: 0.5rem;
     overflow: hidden;
@@ -27,7 +26,7 @@ body.is-terminal-window {
         width: 100vw;
         height: 100vh;
         max-width: 100vw;
-        margin: 0;
+        top: 0;
     }
 
 .title-bar {
