--- a/ClientApp/src/components/NavMenu.css
+++ b/ClientApp/src/components/NavMenu.css
@@ -45,3 +45,26 @@ html {
 .navbar-toggler, .navbar-toggler:focus {
     box-shadow: 0 0 0 0rem;
 }
+
+.icon-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+    .icon-text .react-icon {
+        margin-right: 0.5em;
+    }
+
+.terminal-button {
+    background-color: #238636; /* Button color */
+    color: #E6EDF3;
+    padding: 0px 10px;
+    border-radius: 5px;
+    border-style: none;
+    min-height: 35px;
+}
+
+    .terminal-button:hover {
+        background-color: #2DA042;
+    }
