Moved TerminalProvider wrap from App.js to layout.tsx

--- a/portfolio-web-app/src/app/globals.css
+++ b/portfolio-web-app/src/app/globals.css
@@ -94,13 +94,6 @@ body {
 
 /* Terminal.css */
 
-html, body {
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-
 .terminal-window {
   position: fixed;
   z-index: 1000;
@@ -270,14 +263,6 @@ html, body {
   }
 }
 
-/* Home.css */
-/*
-body.is-home {
-  background: url('/public/index-background.jpg') top left no-repeat;
-  background-size: cover;
-}
-*/
-
 /* NavMenu.css */
 
 a.navbar-brand {
@@ -351,35 +336,6 @@ html {
       background-color: #2DA042;
   }
 
-/* custom.css */
-
-/* Dark mode styles */
-body {
-  background-color: #0D1116; /* Dark background for the whole page */
-  color: #E6EDF3; /* Lighter text suitable for dark background */
-}
-
-a {
-  color: #8ab4f8; /* Lighter link color for dark mode */
-}
-
-.btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem #121212, 0 0 0 0.25rem #258cfb; /* Adjust the inner shadow to match the dark background */
-}
-
-code {
-  color: #ffb74d; /* Making code stand out on dark background */
-  background-color: #282828; /* Optional: add a background color to code elements */
-}
-
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
-}
-
-/* Inverting button colors for dark mode */
-.btn-primary {
-  background-color: #0a4d76; /* Darker background for buttons */
-  border-color: #083555;
+.home-container {
+  height: 100vh;
 }
