--- a/portfolio-web-app/src/app/globals.css
+++ b/portfolio-web-app/src/app/globals.css
@@ -3,31 +3,18 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+  --foreground-rgb: 255, 255, 255;
+  --background-color: 13, 17, 22;
 }
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  background-color: rgb(var(--background-color));
+  background-size: cover;
+  background-position: center;
 }
 
 /* StockSim.css */
-
 .dashboard-container {
   padding: 20px;
   display: grid;
@@ -93,7 +80,6 @@ body {
 }
 
 /* Terminal.css */
-
 .terminal-window {
   position: fixed;
   z-index: 1000;
@@ -277,7 +263,6 @@ body {
 }
 
 /* NavMenu.css */
-
 a.navbar-brand {
   white-space: normal;
   text-align: center;
